# naos

./: CMakeLists.txt
cmake/: create_image.cmake  qemu_flags.cmake.in
cmake/toolchains/: x86_64.cmake
kernel/: CMakeLists.txt
user/: CMakeLists.txt
